Changing the include subdirectory structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,10 +36,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_BINARY_DIR})
 
 #set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE -s)
 
-add_subdirectory(Libraries/Internal/Tools)
-add_subdirectory(Libraries/External/Base64)
-add_subdirectory(Libraries/External/Utf8)
-add_subdirectory(Libraries/External/googletest)
+add_subdirectory(Libraries)
 
 #target_link_libraries(Include/Base64/Base64 LINK_PUBLIC ${PROJECT_NAME})
 # TODO: Add tests and install targets if needed.
