--- a/Libraries/Internal/CMakeLists.txt
+++ b/Libraries/Internal/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_subdirectory(Cpp-Tanja84dk-CryptoWrapper)
-add_subdirectory(Cpp-Tanja84dk-ROTChipher)
+#add_subdirectory(Cpp-Tanja84dk-ROTChipher)
 add_subdirectory(Tools)
