--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,13 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+find_package(CPM REQUIRED)
+find_package(Tanja84dkTools REQUIRED)
+find_package(Cpp-rhymu8354-Base64 REQUIRED)
+find_package(Cpp-rhymu8354-Utf8 REQUIRED)
+
 configure_file(${PROJECT_NAME}Config.h.in ${PROJECT_NAME}Config.h)
 
 set(SourceFiles
@@ -28,15 +35,11 @@ set(HeaderFiles
     "src/wrapperBinary.h")
 
 # Add source to this project's executable.
-add_executable(${PROJECT_NAME} ${SourceFiles} ${HeaderFiles}) 
+add_executable(${PROJECT_NAME} ${SourceFiles} ${HeaderFiles})
 
-target_link_libraries(${PROJECT_NAME} "Base64" "Tools" "Utf8")
+target_link_libraries(${PROJECT_NAME} libs::Base64 Tanja84dk::Tools libs::Utf8)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_BINARY_DIR})
-
-#set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE -s)
-
-add_subdirectory(Libraries)
 
 #target_link_libraries(Include/Base64/Base64 LINK_PUBLIC ${PROJECT_NAME})
 # TODO: Add tests and install targets if needed.
