Updated to the newest version of tools and few cmake fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # project specific logic here.
 #
 
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.16)
 
 project ("ArgTools" VERSION 0.3.0)
 
@@ -11,7 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Tanja84dkWarnings.cmake)
+include(cmake/Tanja84dkWarnings.cmake)
 
 find_package(CPM REQUIRED)
 find_package(Tanja84dkTools REQUIRED)
@@ -36,14 +36,13 @@ set(HeaderFiles
     "src/wrapperBinary.h")
 
 # Add source to this project's executable.
-add_executable(${PROJECT_NAME} ${SourceFiles} ${HeaderFiles})
+add_executable(${PROJECT_NAME} ${SourceFiles})
 
-target_link_libraries(${PROJECT_NAME} rhymu8354::Base64 Tanja84dk::Tools rhymu8354::Utf8)
+target_link_libraries(${PROJECT_NAME} rhymu8354::Base64 Tanja84dk::tools rhymu8354::Utf8)
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_BINARY_DIR})
+target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_BINARY_DIR})
 
-#target_link_libraries(Include/Base64/Base64 LINK_PUBLIC ${PROJECT_NAME})
-# TODO: Add tests and install targets if needed.
 if(DEFINED ENABLE_TEST)
+    enable_testing()
     add_subdirectory(src/test)
 endif(DEFINED ENABLE_TEST)
