removed things to work on it later and getting it to pass

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,10 +2,10 @@
 
 find_package(Catch2 3 REQUIRED)
 find_package(tanja84dk_crypt REQUIRED)
-find_package(Tanja84dkTools REQUIRED)
+find_package(tanja84dk_tools REQUIRED)
 # These tests can use the Catch2-provided main
 add_executable(${PROJECT_NAME}_Test src/main.cpp)
-target_link_libraries(${PROJECT_NAME}_Test PRIVATE Catch2::Catch2WithMain Tanja84dk::crypt Tanja84dkTools)
+target_link_libraries(${PROJECT_NAME}_Test PRIVATE Catch2::Catch2WithMain Tanja84dk::crypt)
 target_include_directories(${PROJECT_NAME}_Test PRIVATE ${tanja84dk_tools_BINARY_DIR}/include)
 
 include(CTest)
